actividad_for_loop/ForLangParser.py
# Generated from ForLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ForLangParser ( Parser ):

    grammarFileName = "ForLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'for'", "'('", "')'", "'{'", "'}'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'=='", "'!='", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "FOR", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", 
                      "GT", "LT", "EQ", "NEQ", "SEMI", "ID", "INT", "WS" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_forStmt = 2
    RULE_indice = 3
    RULE_condicion = 4
    RULE_paso = 5

    ruleNames =  [ "programa", "sentencia", "forStmt", "indice", "condicion", 
                   "paso" ]

    EOF = Token.EOF
    FOR=1
    LPAREN=2
    RPAREN=3
    LBRACE=4
    RBRACE=5
    ASSIGN=6
    PLUS=7
    MINUS=8
    MUL=9
    DIV=10
    GT=11
    LT=12
    EQ=13
    NEQ=14
    SEMI=15
    ID=16
    INT=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ForLangParser.EOF, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(ForLangParser.SentenciaContext,i)


        def getRuleIndex(self):
            return ForLangParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = ForLangParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.sentencia()
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 65542) != 0)):
                    break

            self.state = 17
            self.match(ForLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forStmt(self):
            return self.getTypedRuleContext(ForLangParser.ForStmtContext,0)


        def paso(self):
            return self.getTypedRuleContext(ForLangParser.PasoContext,0)


        def getRuleIndex(self):
            return ForLangParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = ForLangParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 21
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.forStmt()
                pass
            elif token in [2, 16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 20
                self.paso()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(ForLangParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(ForLangParser.LPAREN, 0)

        def indice(self):
            return self.getTypedRuleContext(ForLangParser.IndiceContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(ForLangParser.SEMI)
            else:
                return self.getToken(ForLangParser.SEMI, i)

        def condicion(self):
            return self.getTypedRuleContext(ForLangParser.CondicionContext,0)


        def paso(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ForLangParser.PasoContext)
            else:
                return self.getTypedRuleContext(ForLangParser.PasoContext,i)


        def RPAREN(self):
            return self.getToken(ForLangParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(ForLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ForLangParser.RBRACE, 0)

        def getRuleIndex(self):
            return ForLangParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)




    def forStmt(self):

        localctx = ForLangParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(ForLangParser.FOR)
            self.state = 24
            self.match(ForLangParser.LPAREN)
            self.state = 25
            self.indice()
            self.state = 26
            self.match(ForLangParser.SEMI)
            self.state = 27
            self.condicion()
            self.state = 28
            self.match(ForLangParser.SEMI)
            self.state = 29
            self.paso()
            self.state = 30
            self.match(ForLangParser.RPAREN)
            self.state = 31
            self.match(ForLangParser.LBRACE)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==16:
                self.state = 32
                self.paso()
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 33
                    self.match(ForLangParser.SEMI)


                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self.match(ForLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ForLangParser.ID)
            else:
                return self.getToken(ForLangParser.ID, i)

        def ASSIGN(self):
            return self.getToken(ForLangParser.ASSIGN, 0)

        def INT(self):
            return self.getToken(ForLangParser.INT, 0)

        def getRuleIndex(self):
            return ForLangParser.RULE_indice

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndice" ):
                listener.enterIndice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndice" ):
                listener.exitIndice(self)




    def indice(self):

        localctx = ForLangParser.IndiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_indice)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(ForLangParser.ID)
            self.state = 44
            self.match(ForLangParser.ASSIGN)
            self.state = 45
            _la = self._input.LA(1)
            if not(_la==16 or _la==17):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ForLangParser.ID)
            else:
                return self.getToken(ForLangParser.ID, i)

        def INT(self):
            return self.getToken(ForLangParser.INT, 0)

        def GT(self):
            return self.getToken(ForLangParser.GT, 0)

        def LT(self):
            return self.getToken(ForLangParser.LT, 0)

        def EQ(self):
            return self.getToken(ForLangParser.EQ, 0)

        def NEQ(self):
            return self.getToken(ForLangParser.NEQ, 0)

        def getRuleIndex(self):
            return ForLangParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = ForLangParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(ForLangParser.ID)
            self.state = 48
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30720) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 49
            _la = self._input.LA(1)
            if not(_la==16 or _la==17):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PasoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ForLangParser.ID)
            else:
                return self.getToken(ForLangParser.ID, i)

        def ASSIGN(self):
            return self.getToken(ForLangParser.ASSIGN, 0)

        def INT(self):
            return self.getToken(ForLangParser.INT, 0)

        def MUL(self):
            return self.getToken(ForLangParser.MUL, 0)

        def DIV(self):
            return self.getToken(ForLangParser.DIV, 0)

        def PLUS(self):
            return self.getToken(ForLangParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(ForLangParser.MINUS, 0)

        def LPAREN(self):
            return self.getToken(ForLangParser.LPAREN, 0)

        def paso(self):
            return self.getTypedRuleContext(ForLangParser.PasoContext,0)


        def RPAREN(self):
            return self.getToken(ForLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return ForLangParser.RULE_paso

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaso" ):
                listener.enterPaso(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaso" ):
                listener.exitPaso(self)




    def paso(self):

        localctx = ForLangParser.PasoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paso)
        self._la = 0 # Token type
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(ForLangParser.ID)
                self.state = 52
                self.match(ForLangParser.ASSIGN)
                self.state = 53
                self.match(ForLangParser.ID)
                self.state = 54
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==9 or _la==10):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 55
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(ForLangParser.ID)
                self.state = 57
                self.match(ForLangParser.ASSIGN)
                self.state = 58
                self.match(ForLangParser.ID)
                self.state = 59
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==7 or _la==8):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 60
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(ForLangParser.LPAREN)
                self.state = 62
                self.paso()
                self.state = 63
                self.match(ForLangParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





